# Partisia-hackathon

./: Cargo.toml  README.md
lending/: Cargo.toml
lending/src/: lib.rs
token/src/: lib.rs
